<resources>
    <string name="app_name">Samsung_project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_test">Add test</string>
    <string name="enter_test_name">Enter test name</string>
    <string name="TestNameEdit">Name</string>
    <string name="enterTestNameTextVIew">Enter</string>
    <string name="sign_up_text_view">Sign up</string>
    <string name="email_hint">email</string>
    <string name="name_edit_text">Name</string>
    <string name="sign_in_button_text">Sign in</string>
</resources>